--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta name="theme-color" content="#f50f50">
+<meta name="theme-color" content="#ff5500">
 <meta property="og:site_name" content="leroy on SoundCloud">
 <meta property="og:title" content="i never go swimming without my lipliner" />
 <meta name="twitter:card" content="https://i1.sndcdn.com/artworks-lcqj9H3ytdWBh973-DkHqgg-t500x500.jpg">
